--- a/style.css
+++ b/style.css
@@ -6,30 +6,21 @@
 }
 .images{
     position: relative;
-    /* overflow: hidden; */
-    /* width: 362px;
-    height: 333px; */
 }
 .images>img{
-    transition: all 0.3s;
-}
-.images>img:nth-child(1){
+    transition: all 0.5s;
     position: absolute;
     top: 0;
+}
+.images>img.current{
     left: 0;
+    transform: translateX(0);
+    z-index: 1;
 }
-.images>img:nth-child(2){
-    position: absolute;
-    top: 0;
-    left: 100%;
+.images>img.enter{
+    transform: translateX(100%);
 }
-.images>img:nth-child(3){
-    position: absolute;
-    top: 0;
-    left: 100%;
-}
-.images>img.right{
-    position: absolute;
-    top: 0;
-    left: 100%;
+.images>img.leave{
+    transform: translateX(-100%);
+    z-index: 1;
 }
